tests/rosetta/out/Smalltalk/arithmetic-complex.out
/tmp/arithmetic-complex.st:6: parse error, expected integer literal or floating-point literal or decimal literal
