tests/rosetta/out/Smalltalk/arithmetic-complex.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| add mul neg inv denom conj cstr s a b |
add := [:a :b | Dictionary from:{'re'->((a at: 're') + (b at: 're')). 'im'->((a at: 'im') + (b at: 'im'))}. ].
mul := [:a :b | Dictionary from:{'re'->((((a at: 're') * (b at: 're'))) - (((a at: 'im') * (b at: 'im')))). 'im'->((((a at: 're') * (b at: 'im'))) + (((a at: 'im') * (b at: 're'))))}. ].
neg := [:a | Dictionary from:{'re'->-(a at: 're'). 'im'->-(a at: 'im')}. ].
inv := [:a | denom := ((((a at: 're') * (a at: 're'))) + (((a at: 'im') * (a at: 'im')))).
Dictionary from:{'re'->((a at: 're') / denom). 'im'->((-(a at: 'im')) / denom)}. ].
conj := [:a | Dictionary from:{'re'->a at: 're'. 'im'->-(a at: 'im')}. ].
cstr := [:a | s := ('(' + ((a at: 're' asString))).
(((a at: 'im') >= 0)) ifTrue: [
s := (((((s + '+')) + ((a at: 'im' asString)))) + 'i)').
] ifFalse: [
s := (((s + ((a at: 'im' asString)))) + 'i)').
].
s. ].
a := Dictionary from:{'re'->1. 'im'->1}.
b := Dictionary from:{'re'->3.14159. 'im'->1.25}.
Transcript show: ((('a:       ') + (cstr value: a))) printString; cr.
Transcript show: ((('b:       ') + (cstr value: b))) printString; cr.
Transcript show: ((('a + b:   ') + (cstr value: add value: a value: b))) printString; cr.
Transcript show: ((('a * b:   ') + (cstr value: mul value: a value: b))) printString; cr.
Transcript show: ((('-a:      ') + (cstr value: neg value: a))) printString; cr.
Transcript show: ((('1 / a:   ') + (cstr value: inv value: a))) printString; cr.
Transcript show: ((('a̅:       ') + (cstr value: conj value: a))) printString; cr.
